--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MY_SQL_DATABASE: igcommerce
-      MYSQL_USER: root
-      MYSQL_PASSWORD:
+      MYSQL_PASSWORD: root
     ports:
       - 3306:3306
     volumes:
